# Daybreak

./: .editorconfig  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  CMakePresets.json  Daybreak.sln  Daybreak.slnx  Directory.Build.props  Directory.Packages.props  LICENSE.md  README.md  nuget.config
Daybreak.GWCA/: CMakeLists.txt  version.rc.in
Daybreak.GWCA/header/: AliveModule.h  CartographerModule.h  DaybreakModule.h  DebugModule.h  EntityNameModule.h  GameModule.h  GameStateModule.h  HttpLogger.h  InventoryModule.h  ItemNameModule.h  LoginModule.h  MainPlayerModule.h  MapModule.h  NameModule.h  PathingMetadataModule.h  PathingModule.h  PreGameModule.h  ProcessIdModule.h  Server.h  SessionModule.h  TitleInfoModule.h  UserModule.h  Utils.h  WhisperModule.h  httplib.h  pipesrv.h
Daybreak.GWCA/header/payloads/: Attribute.h  Bag.h  BagContent.h  Build.h  Camera.h  CartographerPayload.h  DebugPayload.h  GamePayload.h  GameStatePayload.h  InventoryPayload.h  LivingEntity.h  LoginPayload.h  MainPlayer.h  MapIcon.h  MapPayload.h  NamePayload.h  PathingMetadataPayload.h  PathingPayload.h  Player.h  (+9 more)
Daybreak.GWCA/source/: AliveModule.cpp  CartographerModule.cpp  DebugModule.cpp  EntityNameModule.cpp  GameModule.cpp  GameStateModule.cpp  HttpLogger.cpp  InventoryModule.cpp  ItemNameModule.cpp  LoginModule.cpp  MainPlayerModule.cpp  MapModule.cpp  NameModule.cpp  PathingMetadataModule.cpp  PathingModule.cpp  PreGameModule.cpp  ProcessIdModule.cpp  Server.cpp  SessionModule.cpp  TitleInfoModule.cpp  UserModule.cpp  Utils.cpp  WhisperModule.cpp  dllmain.cpp  pipesrv.cpp
(+2569 files in other folders)
